alignment/justifications fixes

--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,4 @@
 body {
-  background: rgb(219,52,69);
-  background: linear-gradient(90deg, rgba(219,52,69,1) 0%, rgba(254,193,5,1) 100%);
-  background-image: url('./bg.jpg');
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position:center;
-  background-attachment: fixed;
   text-align: center;
   align-content: center;
   align-items: center;
@@ -14,10 +7,25 @@ body {
   margin: 0;
   width: 100%;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+* {
+  -webkit-box-sizing: content-box;
+     -moz-box-sizing: content-box;
+          box-sizing: content-box;
+}
+*:before,
+*:after {
+  -webkit-box-sizing: content-box;
+     -moz-box-sizing: content-box;
+          box-sizing: content-box;
+}
+#authPan:after{
+  box-sizing: border-box;
+
 }
 
 .itemCards{
@@ -26,13 +34,14 @@ body {
   background-color: transparent;
   align-items: center;
   margin: auto;
+
 }
 
 h1{
   font-family: 'Montserrat', sans-serif;
   color: #444444;
-background: transparent;
-text-shadow: 1px 0px 1px #CCCCCC, 0px 1px 1px #EEEEEE, 2px 1px 1px #CCCCCC, 1px 2px 1px #EEEEEE, 3px 2px 1px #CCCCCC, 2px 3px 1px #EEEEEE, 4px 3px 1px #CCCCCC, 3px 4px 1px #EEEEEE, 5px 4px 1px #CCCCCC, 4px 5px 1px #EEEEEE, 6px 5px 1px #CCCCCC, 5px 6px 1px #EEEEEE, 7px 6px 1px #CCCCCC;
+  background: transparent;
+  text-shadow: 1px 0px 1px #CCCCCC, 0px 1px 1px #EEEEEE, 2px 1px 1px #CCCCCC, 1px 2px 1px #EEEEEE, 3px 2px 1px #CCCCCC, 2px 3px 1px #EEEEEE, 4px 3px 1px #CCCCCC, 3px 4px 1px #EEEEEE, 5px 4px 1px #CCCCCC, 4px 5px 1px #EEEEEE, 6px 5px 1px #CCCCCC, 5px 6px 1px #EEEEEE, 7px 6px 1px #CCCCCC;
 }
 .card-body{
   background-color: transparent;
@@ -40,98 +49,114 @@ text-shadow: 1px 0px 1px #CCCCCC, 0px 1px 1px #EEEEEE, 2px 1px 1px #CCCCCC, 1px 
 }
 h3{
   font-family: 'Montserrat', sans-serif;
-  color: rgba(0,0,0,.6);
+  color: cornsilk;
   text-shadow: 2px 1px 1px rgba(255,255,255,.2);}
-.items{
-  padding-top: 1em;
-  text-align: center;
-}
-#wicBar{
-  /* check if scanner works, if not: uncomment next 2 lines */
-  background-color: white;
-  color: black;
-  font-size: 2em;
-  font-family: 'Libre Barcode 39 Text', cursive;
-  margin-top: 20px;
-  padding-left: 20px;
-  padding-right: 20px;
-}
-
-
-
-
-.Card{
-  display: flex;
-  width: 100%;
-  justify-content: space-around;
-  align-items: center;
-}
-.card{
-  background-color: transparent;
-  align-items: center;  
-}
-div.card{
-  background-color: transparent;
-}
-
-.add{
-  padding-top: 1em;
-  position: block;
-  text-align: center;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
-
-.cardDude{
-  width: 100%;
-  margin: 0;
-  background-color: transparent;
-}
-#cardCon{
-  background-color: transparent;
-}
-
-.cardHolder{
-        width: '100%';
-        display: flex;
-        justify-content: center;
-        align-items: stretch;
-}
-
-.card-text{
-        width: '100%';
-        display: flex;
-        justify-content: space-evenly;
-        align-items: stretch;
-        padding: 1px 4px;
-}
-
-
-
-/* td {
-  padding-bottom: 1em;
-  width: 50%;
-  display:inline-block;
-  margin: auto
-} */
-/* .cells{
-  height: 30vh;
-  text-align: center;
-} */
-#description{
-  font-size: 15vh;
-}
-/* .blankRow{
-  background-color: black;
-} */
-
-
-/* @media only screen and (max-width: 600px) {
-  .add{
+  .items{
+    padding-top: 1em;
     text-align: center;
-    position: unset;
   }
-} */
+  #wicBar{
+    /* check if scanner works, if not: uncomment next 2 lines */
+    background-color: white;
+    color: black;
+    font-size: 2em;
+    font-family: 'Libre Barcode 39 Text', cursive;
+    margin-top: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+  
+  
+  
+  
+  .Card{
+    display: flex;
+    width: 100%;
+    justify-content: space-around;
+    align-items: center;
+  }
+  .card{
+    background-color: transparent;
+    align-items: center;  
+  }
+  div.card{
+    background-color: transparent;
+    border: none;
+  }
+  
+  .add{
+    padding-top: 1em;
+    position: block;
+    text-align: center;
+  }
+  
+  code {
+    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
+  }
+  
+  .cardDude{
+    width: 100%;
+    margin: 0;
+    background-color: transparent;
+  }
+  #cardCon{
+    background-color: transparent;
+  }
+  
+  .cardHolder{
+    width: '100%';
+    display: flex;
+    justify-content: center;
+    align-items: stretch;
+  }
+  .addHolder{
+    width: '100%';
+    display: flex;
+    justify-content: center;
+    padding-right: 45px;
+  }
+  .card-text{
+    width: '100%';
+    display: flex;
+    justify-content: space-evenly;
+    align-items: stretch;
+    padding: 1px 4px;
+  }
+  
+  
+  #description{
+    font-size: 15vh;
+  }
+  @media (min-width: 350px) {
+    body {
+      background-image: linear-gradient(to bottom, #0f00ff, #044cff, #3873ff, #6595ff, #92b4fe, #92b4fe, #92b4fe, #92b4fe, #6595ff, #3873ff, #044cff, #0f00ff);
+    }
+    .addHolder{
+      padding-right: 15%;
+    }
+  }
+  
+  @media (min-width: 500px) {
+    body {
+        background-image: url('./bg.jpg');
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position:center;
+        background-attachment: fixed;
+    }
+  }
+  
+  @media (min-width: 600px) {
+    body {
+        background-image: url('./bg.jpg');
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position:center;
+        background-attachment: fixed;
+    }
+    .addHolder{
+      padding-right: 19%;
+    }
+  }
+  
